Fixed text alignment

--- a/css/12-basic-javascript-instructions.css
+++ b/css/12-basic-javascript-instructions.css
@@ -130,6 +130,10 @@ tr td:first-child {
   padding-right: 20px;
 }
 
+td {
+  text-align: left;
+}
+
 body:before,
 body:after {
   content: "";
